Updates to the bulk order
